--- a/Hawaii/UI/Controller/Cell/InputTableViewCell.xib
+++ b/Hawaii/UI/Controller/Cell/InputTableViewCell.xib
@@ -19,7 +19,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="74.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="Enter reason for leave" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fyY-6s-R2U" customClass="RoundedTextView" customModule="Hawaii" customModuleProvider="target">
+                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fyY-6s-R2U" customClass="RoundedTextView" customModule="Hawaii" customModuleProvider="target">
                         <rect key="frame" x="16" y="6.5" width="288" height="64"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
